[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "asyncio==3.4.3",
    "fastapi==0.115.6",
    "langchain==0.1.0",
    "langchain-openai==0.0.2",
    "langchainhub==0.1.14",
    "neo4j==5.15.0",
    "numpy==1.26.4",
    "openai==1.7.2",
    "opentelemetry-api==1.29.0",
    "pydantic==2.5.1",
    "uvicorn==0.34.0"
]

[project.optional-dependencies]
dev = ["black", "flake8"]